--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-    <div class="col-md-3">
-        <span class="hipster img-fluid rounded"></span>
+    <div class="col-md-4">
+        <span class="instruments img-fluid rounded"></span>
     </div>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <h1 class="display-4" jhiTranslate="home.title">Welcome, Java Hipster!</h1>
         <p class="lead" jhiTranslate="home.subtitle">This is your homepage</p>
 
@@ -10,19 +10,42 @@
             <div class="alert alert-success" *ngSwitchCase="true">
                 <span id="home-logged-message" *ngIf="account" jhiTranslate="home.logged.message"
                     [translateValues]="{username: account.login}"> You are logged in as user "{{account.login}}". </span>
+
+                <div class="col-3 col-xs-2 text-right">
+                    <a [routerLink]="['/post/new']" class="btn btn-primary m-0 mb-1 text-white">Create new Post</a>
+                </div>
+
+                <!--<button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-post" [routerLink]="['/post/new']">
+                    <fa-icon [icon]="'plus'"></fa-icon>
+                    <span class="hidden-sm-down"  jhiTranslate="soundgramApp.post.home.createLabel">
+                        Create a new Post
+                    </span>
+                </button>-->
             </div>
 
-            <div class="alert alert-warning" *ngSwitchCase="false">
-                <span jhiTranslate="global.messages.info.authenticated.prefix">If you want to </span>
-                <a class="alert-link" (click)="login()" jhiTranslate="global.messages.info.authenticated.link">sign in</a><span jhiTranslate="global.messages.info.authenticated.suffix">, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").</span>
+            <div class="alert alert-primary" *ngSwitchCase="false">
+<!--                <span jhiTranslate="global.messages.info.authenticated.prefix">If you want to </span>
+                <a class="alert-link" (click)="login()" jhiTranslate="global.messages.info.authenticated.link">sign in</a><span jhiTranslate="global.messages.info.authenticated.suffix">, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").</span>-->
+
+                <p class="font-weight-bold">
+                    <span >To get started, please </span>  <!--jhiTranslate="global.messages.info.authenticated.prefixer"-->
+                    <a href="" (click)="login(); false">
+                        <fa-icon [icon]="'sign-in-alt'"></fa-icon>
+                        <strong jhiTranslate="global.messages.info.authenticated.link">Sign In</strong></a>
+                </p>
+
             </div>
-            <div class="alert alert-warning" *ngSwitchCase="false">
-                <span jhiTranslate="global.messages.info.register.noaccount">You don't have an account yet?</span>&nbsp;
-                <a class="alert-link" routerLink="account/register" jhiTranslate="global.messages.info.register.link">Register a new account</a>
+            <div class="alert alert-primary" *ngSwitchCase="false">
+                <!--<span jhiTranslate="global.messages.info.register.noaccount">You don't have an account yet?</span>&nbsp;
+                <a class="alert-link" routerLink="account/register" jhiTranslate="global.messages.info.register.link">Register a new account</a>-->
+
+                <span jhiTranslate="global.messages.info.register.noaccount">You don't have an account yet?</span>
+                <a routerLink="register" jhiTranslate="global.messages.info.register.link">Register a new account</a>.
+
             </div>
         </div>
 
-        <p jhiTranslate="home.question">
+<!--        <p jhiTranslate="home.question">
             If you have any question on JHipster:
         </p>
 
@@ -36,6 +59,6 @@
 
         <p>
             <span jhiTranslate="home.like">If you like JHipster, don't forget to give us a star on</span> <a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer" jhiTranslate="home.github">GitHub</a>!
-        </p>
+        </p> -->
     </div>
 </div>
