Frontend - fonts, colors (home + layout, navbar), i18n texts Tag name in posts (instead of id)

--- a/src/main/webapp/app/entities/post/post-detail.component.html
+++ b/src/main/webapp/app/entities/post/post-detail.component.html
@@ -16,7 +16,7 @@
                 <dt><span jhiTranslate="soundgramApp.post.tag">Tag</span></dt>
                 <dd>
                     <span *ngFor="let tag of post.tags; let last = last">
-                        <a [routerLink]="['/tag', tag?.id, 'view' ]">{{tag.id}}</a>{{last ? '' : ', '}}
+                        <a [routerLink]="['/tag', tag?.id, 'view' ]">{{tag.name}}</a>{{last ? '' : ', '}}
                     </span>
                 </dd>
             </dl>
