Speaker-512White.png, users texts

--- a/src/main/webapp/app/home/home.scss
+++ b/src/main/webapp/app/home/home.scss
@@ -1,7 +1,7 @@
 /* ==========================================================================
 Main page styles
 ========================================================================== */
-
+/*
 .hipster {
   display: inline-block;
   width: 347px;
@@ -10,7 +10,7 @@ Main page styles
   background-size: contain;
 }
 
-/* wait autoprefixer update to allow simple generation of high pixel density media query */
+!* wait autoprefixer update to allow simple generation of high pixel density media query *!
 @media only screen and (-webkit-min-device-pixel-ratio: 2),
   only screen and (-moz-min-device-pixel-ratio: 2),
   only screen and (-o-min-device-pixel-ratio: 2/1),
@@ -20,7 +20,7 @@ Main page styles
     background: url('../../content/images/jhipster_family_member_2.svg') no-repeat center top;
     background-size: contain;
   }
-}
+}*/
 
 .instruments {
   display: inline-block;
