--- a/src/main/webapp/content/scss/_bootstrap-variables.scss
+++ b/src/main/webapp/content/scss/_bootstrap-variables.scss
@@ -9,6 +9,8 @@
 // Grayscale and brand colors for use across Bootstrap.
 
 $primary: #522b72;
+$primary-dark: #210439;
+$secondary: #5c5393;
 $success: #b0ca65;
 $info: #9376ac;
 $warning: #d4be6a;
