--- a/src/main/webapp/app/users/user-detail/user-detail.component.html
+++ b/src/main/webapp/app/users/user-detail/user-detail.component.html
@@ -39,8 +39,9 @@
                     </ul>
                 </dd>
             </dl>
+            <!--"../../"-->
             <button type="submit"
-                    routerLink="../../"
+                    routerLink="/users"
                     class="btn btn-info">
                 <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back"> Back</span>
             </button>
