--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -17,17 +17,17 @@
                 </a>
             </li>
 
-            <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+            <li *ngSwitchCase="true" class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <a class="nav-link" routerLink="users" (click)="collapseNavbar()">
                     <span>
                         <fa-icon [icon]="'users'"></fa-icon>
-<!--                        <i class="fa fa-hand-spock-o" aria-hidden="true"></i>-->
+                        <!--                        <i class="fa fa-hand-spock-o" aria-hidden="true"></i>-->
                         <span jhiTranslate="global.menu.users">Users</span>
                     </span>
                 </a>
             </li>
 
-            <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+            <li *ngSwitchCase="true" class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <a class="nav-link" routerLink="profile" (click)="collapseNavbar()">
                     <fa-icon [icon]="'id-badge'"></fa-icon>
                     <!--<i class="fa fa-hand-spock-o" aria-hidden="true"></i>-->
@@ -35,7 +35,7 @@
                 </a>
             </li>
 
-            <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+            <li *ngSwitchCase="true" class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <a class="nav-link" routerLink="music" (click)="collapseNavbar()">
                     <fa-icon [icon]="'music'"></fa-icon>
                     <!--<i class="fa fa-hand-spock-o" aria-hidden="true"></i>-->
@@ -178,7 +178,7 @@
                       Account
                     </span>
                   </span>
-                  <span *ngIf="getImageUrl()">
+                    <span *ngIf="getImageUrl()">
                       <img [src]="getImageUrl()" class="profile-image rounded-circle" alt="Avatar">
                   </span>
                 </a>
