Images and filesystem

--- a/src/main/webapp/app/entities/image/image-detail.component.html
+++ b/src/main/webapp/app/entities/image/image-detail.component.html
@@ -21,6 +21,8 @@
                 </dd>
             </dl>
 
+            <img id="img}"/>
+
             <button type="submit"
                     (click)="previousState()"
                     class="btn btn-info">
