--- a/src/main/webapp/app/entities/image/image-update.component.html
+++ b/src/main/webapp/app/entities/image/image-update.component.html
@@ -4,6 +4,15 @@
             <h2 id="jhi-image-heading" jhiTranslate="soundgramApp.image.home.createOrEditLabel">Create or edit a Image</h2>
             <div>
                 <jhi-alert-error></jhi-alert-error>
+
+                <div style="text-align:center">
+                    <label>
+                        <span>Wybierz plik graficzny: </span>
+                        <input type="file" (change)="selectFile($event)">
+                    </label>
+                    <!--<button [disabled]="!selectedFiles" (click)="upload()">Upload</button>-->
+                </div>
+
                 <div class="form-group" [hidden]="!editForm.get('id').value">
                     <label for="id" jhiTranslate="global.field.id">ID</label>
                     <input type="text" class="form-control" id="id" name="id" formControlName="id"
