--- a/src/main/webapp/app/entities/post/post-update.component.html
+++ b/src/main/webapp/app/entities/post/post-update.component.html
@@ -44,8 +44,16 @@
                 </button>-->
 
                 <div style="text-align:center">
-                    <div [innerHtml]='msg'></div>
                     <label>
+                        <span>Dodaj plik audio: </span>
+                        <input type="file"(change)="selectFile($event)">
+                    </label>
+                    <!--<button [disabled]="!selectedFiles" (click)="upload()">Upload</button>-->
+                </div>
+                <br>
+                <div style="text-align:center">
+                    <label>
+                        <span>Dodaj obraz: </span>
                         <input type="file" (change)="selectFile($event)">
                     </label>
                     <!--<button [disabled]="!selectedFiles" (click)="upload()">Upload</button>-->
