--- a/src/main/webapp/app/entities/post/post-update.component.html
+++ b/src/main/webapp/app/entities/post/post-update.component.html
@@ -46,7 +46,7 @@
                 <div style="text-align:center">
                     <label>
                         <span>Dodaj plik audio: </span>
-                        <input type="file"(change)="selectFile($event)">
+                        <input type="file"(change)="selectAudioFile($event)">
                     </label>
                     <!--<button [disabled]="!selectedFiles" (click)="upload()">Upload</button>-->
                 </div>
@@ -54,7 +54,7 @@
                 <div style="text-align:center">
                     <label>
                         <span>Dodaj obraz: </span>
-                        <input type="file" (change)="selectFile($event)">
+                        <input type="file" (change)="selectImage($event)">
                     </label>
                     <!--<button [disabled]="!selectedFiles" (click)="upload()">Upload</button>-->
                 </div>
