--- a/src/main/webapp/app/entities/post/post-detail.component.html
+++ b/src/main/webapp/app/entities/post/post-detail.component.html
@@ -83,47 +83,47 @@
         </div>
     </div>
 
-<!--    <div class="alert alert-warning" *ngIf="usersComments?.length === 0">-->
-<!--        <span jhiTranslate="soundgramApp.comment.home.notFound">No comments found</span>-->
-<!--    </div>-->
-<!--    <div class="table-responsive" *ngIf="usersComments?.length > 0">-->
-<!--        <table class="table table-striped" aria-describedby="page-heading">-->
-<!--            <thead>-->
-<!--            <tr>-->
-<!--                <th scope="col"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
-<!--                <th scope="col"><span jhiTranslate="soundgramApp.comment.textContent">Text Content</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
-<!--                <th scope="col"><span jhiTranslate="soundgramApp.comment.date">Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
-<!--                <th scope="col"><span jhiTranslate="soundgramApp.comment.user">User</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
-<!--                <th scope="col"><span jhiTranslate="soundgramApp.comment.post">Post</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
-<!--                <th scope="col"></th>-->
-<!--            </tr>-->
-<!--            </thead>-->
-<!--            <tbody>-->
-<!--            <tr *ngFor="let comment of usersComments">-->
-<!--                <td><a [routerLink]="['/comment', comment.id, 'view' ]">{{comment.id}}</a></td>-->
-<!--                <td>{{comment.textContent}}</td>-->
-<!--                <td>{{comment.date | date:'medium'}}</td>-->
-<!--                <td>-->
-<!--                    {{comment.user?.login}}-->
-<!--                </td>-->
-<!--                <td>-->
-<!--                    <div *ngIf="comment.post">-->
-<!--                        <a [routerLink]="['/post', comment.post?.id, 'view' ]" >{{comment.post?.id}}</a>-->
-<!--                    </div>-->
-<!--                </td>-->
-<!--                <td class="text-right">-->
-<!--                    <div class="btn-group">-->
-<!--                        <button type="submit"-->
-<!--                                [routerLink]="['/comment', comment.id, 'edit']"-->
-<!--                                class="btn btn-primary btn-sm">-->
-<!--                            <fa-icon [icon]="'pencil-alt'"></fa-icon>-->
-<!--                            <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>-->
-<!--                        </button>-->
-<!--                    </div>-->
-<!--                </td>-->
-<!--            </tr>-->
-<!--            </tbody>-->
-<!--        </table>-->
-<!--    </div>-->
+    <div class="alert alert-warning" *ngIf="usersComments?.length === 0">
+        <span jhiTranslate="soundgramApp.comment.home.notFound">No comments found</span>
+    </div>
+    <div class="table-responsive" *ngIf="usersComments?.length > 0">
+        <table class="table table-striped" aria-describedby="page-heading">
+            <thead>
+            <tr>
+                <th scope="col"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+                <th scope="col"><span jhiTranslate="soundgramApp.comment.textContent">Text Content</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+                <th scope="col"><span jhiTranslate="soundgramApp.comment.date">Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+                <th scope="col"><span jhiTranslate="soundgramApp.comment.user">User</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+                <th scope="col"><span jhiTranslate="soundgramApp.comment.post">Post</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+                <th scope="col"></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let comment of usersComments">
+                <td><a [routerLink]="['/comment', comment.id, 'view' ]">{{comment.id}}</a></td>
+                <td>{{comment.textContent}}</td>
+                <td>{{comment.date | date:'medium'}}</td>
+                <td>
+                    {{comment.user?.login}}
+                </td>
+                <td>
+                    <div *ngIf="comment.post">
+                        <a [routerLink]="['/post', comment.post?.id, 'view' ]" >{{comment.post?.id}}</a>
+                    </div>
+                </td>
+                <td class="text-right">
+                    <div class="btn-group">
+                        <button type="submit"
+                                [routerLink]="['/comment', comment.id, 'edit']"
+                                class="btn btn-primary btn-sm">
+                            <fa-icon [icon]="'pencil-alt'"></fa-icon>
+                            <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
+                        </button>
+                    </div>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 
 </div>
